# Quantum-AI-ML

./: .gitignore  Quantum_check.ipynb  README.md  Workshop_QML_IrisDataset.ipynb  Workshop_QML_penguins.ipynb  course.ipynb  pyproject.toml
notebooks/: Qiskit_IrisDataset_Practice.ipynb  Quantum_check.ipynb  Workshop_QML_IrisDataset.ipynb
