[project]
name = "quantum-ai-ml-workshop"
version = "0.1.0"
description = "Qiskit and Quantum related workloads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "qiskit>=2.1.2",
    "scikit-learn>=1.7.1",
]
