[project]
name = "quantum-ai-ml-workshop"
version = "0.1.0"
description = "Qiskit and Quantum related workloads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "pdflatex>=0.1.3",
    "pylatexenc>=2.10",
    "qiskit>=2.1.2",
    "qiskit-algorithms>=0.3.1",
    "qiskit-connector>=2.4.4",
    "qiskit-ibm-provider>=0.11.0",
    "qiskit-ibm-runtime>=0.41.1",
    "qiskit-machine-learning>=0.8.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
